Fixed the line break in the header.

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -68,6 +68,8 @@ a.companyname__company-link {
     padding: 0.65em 0 0.8em;
     letter-spacing: 1px;
     color: @color__companyname--text;
+    width: 100%;
+
     @media @mobile {
         padding: 20px 0px;
         font-size: 24px;
